Fix spacing when dt.twocol is used alone

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3350,7 +3350,7 @@ p.clear { clear: both; }
 
 	/* STK
  	 */
-	dt.twocol { clear: both; font-weight: bold; float: left; }
+	dt.twocol { clear: both; font-weight: bold; float: left; margin-bottom: 0.4em }
 	dt.twocol.header { width: 10em; background-color: #ccc; padding-left: 0.4em;}
 	dd.twocol { margin: 0 0 0.4em 0.4em; float: left; }
 	dd.sameday { clear: both; margin-left: 10.5em; margin-bottom: 0.4em; }
